# fms-main

./: .env.example  .gitignore  BACKEND_README.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
prisma/: clear-admins.ts  clear-employees.ts  clear-zones-and-shifts.ts  schema.prisma  seed.ts
prisma/migrations/20260302223515_init/: migration.sql
prisma/migrations/20260304000000_add_audit_description/: migration.sql
prisma/migrations/20260304120000_remove_zone_from_shifts/: migration.sql
prisma/migrations/20260304130000_add_shift_description/: migration.sql
scripts/: build-tauri-frontend.js  build-tauri-frontend.sh  copy-mediapipe.js  download-ffmpeg.js  generate-build-config.js  tauri-linux-build.js
scripts/fms-api-stub/: Cargo.toml
scripts/fms-api-stub/src/: main.rs
src/: README.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-get-api-port.toml  allow-seed-demo-data.toml
src-tauri/proto/: fms_vision.proto
src-tauri/resources/: config.json
src-tauri/resources/ai-python/: PIPELINE.md  README.md  ai_service.py  bytetrack.yaml  convert_yolo.py  requirements.txt  stream_processor.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: error.rs  license.rs  mod.rs  password.rs  rtsp.rs  state.rs  sync.rs
src-tauri/src/api/handlers/: admins.rs  auth.rs  camera_ai.rs  event_handler.rs  face.rs  face_enrollment.rs  mod.rs  onboarding.rs  rest.rs  stream.rs
src-tauri/src/db/: mod.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/admins/: page.tsx
src/contexts/: ThemeContext.tsx
src/core/: cookies.ts
src/styles/: tokens.css
(+198 files in other folders)
